[package]
name = "ansible_modules"
version = "0.1.0"
authors = ["0xdeafbeef <0xdeafbeef@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
ssh2="0.7.0"
walkdir = "2.3.1"
base64 = "0.12.3"
[[test]]
name = "integration"
path = "tests/lib.rs"
